--- a/Front-End/package.json
+++ b/Front-End/package.json
@@ -8,6 +8,7 @@
     "@material-ui/styles": "^4.11.5",
     "@mui/icons-material": "^6.0.2",
     "@mui/material": "^6.0.2",
+    "@react-pdf/renderer": "^4.0.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,6 +17,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-pdf": "^9.1.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
